@startuml Diagrama

class InterfazGrafica {
  // Atributos y métodos de la Interfaz Gráfica
}

class ItemPoder {
  // Atributos y métodos específicos de ItemPoder
}

class Poder {
  // Atributos y métodos específicos de Poder
}

class Jugador {
  // Atributos y métodos específicos de Jugador
}

class Caracter {
  HP
  X
  y
  sprite
  velocidad

  update()
}

class CaracterGrafico {
  sprite

  animar()
  getframe()

}

class Enemigos {
  // Atributos y métodos específicos de Enemigo
}

class Bloque {
}

class Config{ 
  //Setea la venta del mapa
}



InterfazGrafica *-- ItemPoder
ItemPoder --|> Poder
Jugador --|> Caracter
InterfazGrafica *-- CaracterGrafico
InterfazGrafica *-- BloqueGrafico
InterfazGrafica *-- Config
Enemigos --|> Caracter
Enemigo1 --|> Enemigos
Enemigo2 --|> Enemigos
Enemigo3 --|> Enemigos

CaracterGrafico --|> Caracter
Jugador -> ItemPoder


@enduml
